--- a/.github/workflows/airflow-e2e-tests.yml
+++ b/.github/workflows/airflow-e2e-tests.yml
@@ -66,7 +66,7 @@ on:  # yamllint disable-line rule:truthy
       docker-image-tag:
         description: "Tag of the Docker image to test"
         type: string
-        required: true
+        default: ""
 
 jobs:
   test-e2e-integration-tests:
