--- a/shared/configuration/pyproject.toml
+++ b/shared/configuration/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pendulum>=3.1.0",
     # Dependencies needed for testing with ProvidersManager
     "importlib-metadata>=7.0.0",
+    "structlog>=25.4.0",
 ]
 
 [dependency-groups]
